- Custom 404 & 500 Error Pages - Fluid Layout 1.0 - Textfields alignment fixed - Buttons margin fixed - Static Menu [custom jQuery code] - More space between menu items - New colours

--- a/branches/marco/Template/web/resources/css/styles.css
+++ b/branches/marco/Template/web/resources/css/styles.css
@@ -1,5 +1,65 @@
-body, #header, #footer {
-    width:940px;
+/* TINY_ T W E A K S */
+p.legal {
+    font-size: .90em;
+    color: #666;
+}
+
+
+form {
+    padding:10px;
+    overflow: hidden;
+    width: 920px;
+}
+
+ul {
+    list-style-image: url(../img/arrow.png);
+}
+
+h3 {
+    font-size: 1.3em;
+    margin: 0 0 0.769em;
+    font-weight: normal;
+}
+
+a:link, a:visited {
+    color: #094c93;
+}
+
+.label {
+    vertical-align: top;
+    margin-right: 10%;
+    width:250px;
+}
+
+.value { 
+    float:left;
+}
+
+.button {
+    margin: 1.2% 0%;
+}
+
+
+
+
+
+
+
+
+/* LAYOUT_ G E N E R A L */
+
+html {
+    /* help from http://www.css3.me/ */
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    border-radius: 15px;
+
+    -moz-box-shadow: 0px 0px 2px #000000;
+    -webkit-box-shadow: 0px 0px 2px #000000;
+    box-shadow: 0px 0px 2px #000000;
+}
+body {
+    height: 100%;
 }
 
 body {
@@ -10,19 +70,23 @@ body {
     margin-left: auto;
     margin-right: auto;	
     font: normal 87.5%/1.3 Arial, sans-serif;
+    width:75%;
+
+
 }
 
-form {
-    padding:10px;
-    overflow: hidden;
-    width: 920px;
+#wrap {
+    min-height: 100%;
 }
+
+
+/* H E A D E R */
 
 #header {
     padding-top: 2.6em;
     position: relative;
     padding-bottom: 1.3em;
-
+    width: 100%;
 }	
 
 #header .logo {
@@ -35,9 +99,10 @@ form {
     left: 0;
     text-align: right;
     width: 95%;
-    font-size: 85%;
+    font-size: 90%;
     margin: 0;
     list-style: none;
+    margin-top: 1.3em;
 }
 
 #header li {
@@ -60,10 +125,55 @@ form {
 }
 
 
+/* C O N T E N T */
+#content {
+    min-height: 100%;
+    margin-bottom: 1%;
+    /* background: red; */
+}
+
+
+/* N A V I G A T I O N */
+#nav {
+    margin-top: 4%;
+    margin-bottom: 2%;
+
+}
+
+.menuBar {
+    background: black;
+    background-color: #9CC4E4;
+    position:relative;
+    z-index:999;
+    left:0px;
+    display:inline-block;
+}
+
+.menuBar_after_detach {
+    background-color:darkseagreen; /* Needs IE color fix */
+    position:relative;
+    z-index:999;
+    height:28px;
+    width:100%;
+    left:0px;
+}
+
+.ui-menu .ui-menuitem {
+    margin: 1px 15px !important;
+}
+
+/* F O O T E R */
 #footer {
     border-top: 1px solid #a4a4a4;
     padding-top: 1.3em;
-    margin-top: 2em;
+    margin: 2em 0 2em 0;
+
+
+    position: relative;
+    margin-top: 100%; /* negative value of footer height */
+    height: 23%;
+    clear:both;
+    /* background: #BFF08E; */
 }
 
 #footer .col {
@@ -72,28 +182,4 @@ form {
     min-height: 150px;
     border-right: 1px solid #a4a4a4;
     margin: 0 20px 0 0;
-}
-
-p.legal {
-    font-size: .90em;
-    color: #666;
-}
-ul {
-    list-style-image: url(../img/arrow.png);
-}
-
-.h3 {
-    font-size: 1.3em;
-    margin: 0 0 0.769em;
-    font-weight: normal;
-}
-
-a:link, a:visited {
-    color: #094c93;
-}
-
-.menuBar{
-    margin-top: 1.3em;
-    font-size: 0.9em;
-    margin-bottom: 1.3em;
 }
